Revision of computation model